third_party/move/move-compiler-v2/tests/checking/typing/number_literal_too_large_256.exp

Diagnostics:
error: invalid number literal
  ┌─ tests/checking/typing/number_literal_too_large_256.move:3:9
  │
3 │         115792089237316195423570985008687907853269984665640564039457584007913129639936;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal is too large to fit into the largest possible integer type, 'u256'
