third_party/move/move-compiler-v2/tests/checking/typing/number_literal_too_large_256.move
module 0x8675309::M {
    fun foo() {
        115792089237316195423570985008687907853269984665640564039457584007913129639936;
    }
}
